src/objects/LBI__PlayGroup__c.object
<CustomObject>
    <fields>
        <fullName>LBI__FilterRecommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <defaultValue>999999</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__PlayGroupName__c</fullName>
        <externalId>true</externalId>
        <label>Play Group Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__RecommendationDisplayLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recommendation Display Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__TotalPlays__c</fullName>
        <label>Total Plays</label>
        <summaryForeignKey>LBI__PlayGroupMember__c.LBI__PlayGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Play Group</label>
    <listViews>
        <fullName>LBI__All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{000000000}</displayFormat>
        <label>Play Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Play Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>